// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateViewConfigJs can generate for 'ArrayPropsNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'ArrayPropsNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'ArrayPropsNativeComponentView',

  validAttributes: {
    names: true,
    disableds: true,
    progress: true,
    radii: true,

    colors: {
      process: require('react-native/Libraries/StyleSheet/processColorArray'),
    },

    srcs: true,
    points: true,
    sizes: true,
    object: true,
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'BooleanPropNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'BooleanPropNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'BooleanPropNativeComponentView',

  validAttributes: {
    disabled: true,
    disabledNullable: true,
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'ColorPropNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'ColorPropNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'ColorPropNativeComponentView',

  validAttributes: {
    tintColor: {
      process: require('react-native/Libraries/StyleSheet/processColor'),
    },
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'EdgeInsetsPropNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'EdgeInsetsPropNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'EdgeInsetsPropNativeComponentView',
  validAttributes: {},
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'EnumPropNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'EnumPropNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'EnumPropNativeComponentView',

  validAttributes: {
    alignment: true,
    intervals: true,
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'EventNestedObjectPropsNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'EventNestedObjectPropsNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'EventNestedObjectPropsNativeComponentView',

  bubblingEventTypes: {
    topChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange',
      },
    },
  },

  validAttributes: {
    disabled: true,
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'EventPropsNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'EventPropsNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'EventPropsNativeComponentView',

  bubblingEventTypes: {
    paperDirectName: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange',
      },
    },

    topEnd: {
      phasedRegistrationNames: {
        captured: 'onEndCapture',
        bubbled: 'onEnd',
      },
    },

    paperBubblingName: {
      phasedRegistrationNames: {
        captured: 'onEventBubblingWithPaperNameCapture',
        bubbled: 'onEventBubblingWithPaperName',
      },
    },
  },

  directEventTypes: {
    topEventDirect: {
      registrationName: 'onEventDirect',
    },

    paperDirectName: {
      registrationName: 'onEventDirectWithPaperName',
    },

    paperBubblingName: {
      registrationName: 'onOrientationChange',
    },
  },

  validAttributes: {
    disabled: true,
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'FloatPropsNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'FloatPropsNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'FloatPropsNativeComponentView',

  validAttributes: {
    blurRadius: true,
    blurRadius2: true,
    blurRadius3: true,
    blurRadius4: true,
    blurRadius5: true,
    blurRadius6: true,
    blurRadiusNullable: true,
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'ImagePropNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'ImagePropNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'ImagePropNativeComponentView',

  validAttributes: {
    thumbImage: {
      process: require('react-native/Libraries/Image/resolveAssetSource'),
    },
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'IntegerPropNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'IntegerPropNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'IntegerPropNativeComponentView',

  validAttributes: {
    progress1: true,
    progress2: true,
    progress3: true,
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'InterfaceOnlyNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'RCTInterfaceOnlyComponent';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'RCTInterfaceOnlyComponent',

  bubblingEventTypes: {
    topChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange',
      },
    },
  },

  validAttributes: {
    title: true,
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'MultiNativePropNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'MultiNativePropNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'MultiNativePropNativeComponentView',

  validAttributes: {
    thumbImage: {
      process: require('react-native/Libraries/Image/resolveAssetSource'),
    },

    color: {
      process: require('react-native/Libraries/StyleSheet/processColor'),
    },

    thumbTintColor: {
      process: require('react-native/Libraries/StyleSheet/processColor'),
    },

    point: {
      diff: require('react-native/Libraries/Utilities/differ/pointsDiffer'),
    },
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'NoPropsNoEventsNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'NoPropsNoEventsNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'NoPropsNoEventsNativeComponentView',
  validAttributes: {},
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'ObjectPropsNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'ObjectPropsNativeComponent';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'ObjectPropsNativeComponent',

  validAttributes: {
    objectProp: true,
    objectArrayProp: true,
    objectPrimitiveRequiredProp: true,
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'PointPropNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'PointPropNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'PointPropNativeComponentView',

  validAttributes: {
    startPoint: {
      diff: require('react-native/Libraries/Utilities/differ/pointsDiffer'),
    },
  },
}));
",
}
`;

exports[`GenerateViewConfigJs can generate for 'StringPropNativeComponent.js' 1`] = `
Map {
  "RNCodegenModuleFixturesNativeViewConfig.js" => "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'StringPropNativeComponentView';

export default NativeComponentRegistry.get(nativeComponentName, () => ({
  uiViewClassName: 'StringPropNativeComponentView',

  validAttributes: {
    placeholder: true,
    defaultValue: true,
  },
}));
",
}
`;
